# devobot

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  z.py
.github/actions/python-setup/: action.yml
.github/workflows/: docs.yml
devobot/: config.yaml  config.yml  main.py
devobot/agent/: __init__.py  _common.py  classify.py  defined_answer.py  defined_response.py  node_types.py  node_wrapper.py  prompt_formatting.py  rag.py  state.py  tool_call.py  types.py
devobot/agent/common/: __init__.py  nodes.py  state.py
devobot/agent/nodes/: __init__.py  classify.py  defined_answer.py  rag.py  tool_call.py
devobot/agent/tools/: __init__.py  book_desk.py  georgios_product.py  unbook_desk.py
devobot/config/: __init__.py  agent_config.py  llms.py  main.py  yaml_config.py  yaml_processing.py  yaml_schema.py
devobot/databases/: vector.py
devobot/init/: create_agent.py  create_graph.py  create_nodes.py  yaml_processing.py
devobot/services/: __init__.py  auth.py  database_vector.py  llm.py  secrets.py
devobot/utils/: __init__.py  llm.py  prompt_formatting.py  read_files.py
docs/: index.md
scripts/: create_document.py
