[project]
name = "devobot"
version = "0.1.0"
description = "A chatbot solution to get answers to FAQs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.5",
    "langgraph>=0.2.72",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.20.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-search-documents>=11.5.2",
]
local = [
    "faiss-cpu>=1.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
    "types-pyyaml>=6.0.12.20241230",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.4",
    "mkdocstrings-python>=1.15.0",
    "termynal>=0.13.0",
]
tests = [
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"

# uv lock --upgrade
# uv sync -U --all-groups
# uv pip install -e .[azure,local]