[project]
name = "devobot"
version = "0.1.0"
description = "A chatbot solution to get answers to FAQs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.20.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-search-documents>=11.5.2",
]
local = [
    "chromadb>=0.6.3",
    "langchain-chroma>=0.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
    "types-pyyaml>=6.0.12.20241230",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.7",
    "termynal>=0.13.0",
]
tests = [
    "pytest>=8.3.5",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"

# uv lock --upgrade
# uv sync -U --all-groups
# uv pip install -e .[azure,local]
# chroma run --path ./.chromadb
